--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,4 +1,10 @@
 extends common/layout
 
 block content
-  include includes/index/block1
+  include includes/index/hero
+  .content
+    include includes/index/offer
+    include includes/index/gallery
+    include includes/index/crew
+    include includes/index/about
+    include includes/index/testimonials
