--- a/src/styles/common/_header.scss
+++ b/src/styles/common/_header.scss
@@ -1,1 +1,197 @@
 // Header
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  padding: 1.889rem 0;
+  padding: 1.88rem 0;
+
+  &.fixed {
+    position: fixed;
+    background: $header-gradient;
+    background-size: 200%;
+
+    @include respond(min-md) {
+      &.fixed {
+        padding: 0.8rem 0;
+
+        .header__logo {
+          flex-basis: 6rem;
+        }
+      }
+    }
+  }
+
+  &__inner {
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__logo {
+    position: relative;
+    z-index: 103;
+    flex: 0 0 9.223rem;
+  }
+
+  &__menu-btn {
+    display: none;
+  }
+
+  &__item {
+    display: flex;
+    align-items: center;
+
+    &:not(:last-child) {
+      margin-right: 2.5rem;
+      margin-right: 2.15rem;
+    }
+  }
+
+  &__link {
+    position: relative;
+    font-size: 0.889rem;
+    font-weight: 700;
+    letter-spacing: 0.0088em;
+    letter-spacing: 0.01em;
+    color: $white;
+
+    @include respond(min-md) {
+      &::before {
+        position: absolute;
+        top: 5%;
+        left: 0;
+        z-index: -1;
+        width: 100%;
+        height: 100%;
+        display: block;
+        background-color: $primary-accent;
+        transform: scaleX(0);
+        transition: transform 0.3s $transition-style;
+        content: "";
+      }
+
+      &:hover::before {
+        transform: scaleX(1);
+      }
+    }
+  }
+
+  @include respond(max-lg) {
+    &__logo {
+      flex-basis: 7rem;
+    }
+  }
+
+  @include respond(max-md) {
+    & {
+      padding: 1rem 0;
+    }
+
+    &__inner {
+      position: relative;
+    }
+
+    &__logo {
+      flex-basis: 6rem;
+    }
+
+    &__menu-btn {
+      position: relative;
+      display: block;
+      z-index: 103;
+      width: 1.875rem;
+      height: 1.125rem;
+      padding: 0;
+      border: none;
+      background-color: transparent;
+      outline: none;
+
+      &.active {
+        .header__line:first-child {
+          top: 0.5rem;
+          transform: rotate(-45deg);
+        }
+
+        .header__line:nth-child(2) {
+          transform: scale(0);
+        }
+
+        .header__line:last-child {
+          bottom: 0.5rem;
+          transform: rotate(45deg);
+        }
+      }
+    }
+
+    &__line {
+      position: absolute;
+      left: 0;
+      display: block;
+      width: 100%;
+      height: 0.125rem;
+      border-radius: 0.094rem;
+      background-color: $white;
+      transition: transform 0.3s $transition-style 0s;
+
+      &:first-child {
+        top: 0;
+      }
+
+      &:nth-child(2) {
+        top: 50%;
+        transform: translateY(-50%);
+      }
+
+      &:last-child {
+        bottom: 0;
+      }
+    }
+
+    &__nav {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 102;
+      width: 100%;
+      height: 100%;
+      padding: 6rem 2.5rem 2.5rem;
+      background: $header-gradient;
+      background-size: 200%;
+      transform: translateY(-100%);
+      transition: transform 0.5s $transition-style 0s;
+      overflow-y: auto;
+
+      &.active {
+        transform: translateY(0);
+      }
+    }
+
+    &__list {
+      flex-direction: column;
+    }
+
+    &__item {
+      &:not(:last-child) {
+        margin: 0 0 1.2rem;
+      }
+    }
+
+    &__link {
+      font-size: 1.4rem;
+    }
+  }
+
+  @include respond(max-sm) {
+    &__logo {
+      flex-basis: 4.152rem;
+    }
+  }
+
+  @include respond(max-xs) {
+    & {
+      padding: 0.8rem 0;
+    }
+  }
+}
