--- a/src/pages/common/layout.pug
+++ b/src/pages/common/layout.pug
@@ -5,8 +5,8 @@ html(lang="en")
       meta(charset="UTF-8")
       meta(http-equiv="X-UA-Compatible" content="IE=edge")
       meta(name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0")
-      title Document
-      link(rel="icon" type="image/svg+xml" href="/images/favicon/favicon.svg")
+      title MOUNTAIN - Ski & Snowboard School
+      link(rel="icon" type="image/svg+xml" href="/resources/favicon/favicon.svg")
       link(rel="stylesheet" href="styles/main.css")
   body
     .wrapper
@@ -17,5 +17,7 @@ html(lang="en")
         block footer
           include footer
         block scripts
+          //- script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyA9NSiiLuA3LV0ZWxGO_iTjMl6S6FHHg2Y&callback=initMap&libraries=&v=weekly' async='')
           script(src="js/vendor.js" defer)
           script(src="js/main.js" defer)
+
