--- a/src/styles/base/_helpers.scss
+++ b/src/styles/base/_helpers.scss
@@ -1,22 +1,48 @@
 .wrapper {
-  position: relative;
-  width: 100%;
+  display: flex;
+  flex-direction: column;
   min-height: 100%;
-  overflow: hidden;
+  // overflow-x: hidden;
 }
 
 .page {
-	position: absolute;
-	top: 0;
-	left: 0;
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-	height: 100%;
+  flex: 1 0 100%;
+}
+
+.content {
+  position: relative;
+  z-index: 3;
+  background-color: $primary-white;
+
+  &::before {
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 6.222rem;
+    top: 0;
+    left: 0;
+    z-index: 4;
+    background-image: linear-gradient(180deg, rgba($primary-white, 0) 0%, rgba($primary-white, 1) 92%);
+    transform: translate(0px, -100%);
+    content: "";
+    pointer-events: none;
+  }
 }
 
 .container {
   max-width: $max-width + px;
+}
+
+.container-wide {
+  max-width: $max-width-wide + px;
+
+  @include respond(max-xl) {
+    max-width: $max-width + px;
+  }
+}
+
+.container,
+.container-wide {
   margin: 0 auto;
   padding: 0 15px;
   width: 100%;
@@ -41,6 +67,10 @@
 
 .d-b {
   display: block;
+}
+
+.d-g {
+  display: grid;
 }
 
 .d-f {
@@ -75,19 +105,63 @@
   flex-wrap: wrap;
 }
 
-.flex-wrapper {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
+.title,
+.text {
+  letter-spacing: 0.01em;
 }
 
-.sr-only {
-  display: block;
-  font-size: 0;
-  line-height: 0;
-  width: 0;
+.title {
+  margin: 0 0 0.62em;
+  font-family: $catamaran;
+  font-size: 3.333rem;
+  font-weight: 900;
+  line-height: 1.25;
+  text-align: center;
+  text-transform: uppercase;
+  color: $graphite;
+
+  @include respond(max-md) {
+    font-size: 3.1rem;
+  }
+
+  @include respond(max-sm) {
+    font-size: 2.8rem;
+  }
+
+  @include respond(max-sm) {
+    font-size: 2.5rem;
+  }
 }
 
-.fw-bold {
-  font-weight: 700;
+.text {
+  font-size: 1rem;
+  font-weight: 300;
+  line-height: 1.777;
+  color: $gray;
+}
+
+.item-caption,
+.item-title {
+  letter-spacing: 0.01em;
+  text-transform: uppercase;
+}
+
+.item-caption {
+  margin-bottom: 0.6em;
+  padding: 0 0 0.5em;
+  font-size: 0.778rem;
+  font-weight: 300;
+  color: $gray;
+}
+
+.item-title {
+  margin: 0;
+  font-family: $catamaran;
+  font-size: 1.333rem;
+  font-weight: 900;
+  line-height: 1.2;
+
+  @include respond(max-sm) {
+    font-size: 1.2rem;
+  }
 }
