--- a/src/styles/components/_logo.scss
+++ b/src/styles/components/_logo.scss
@@ -1,8 +1,9 @@
 // Logo
 .logo {
-  display: inline-block;
 
   &__img {
-    height: 100%;
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
   }
 }
