Some bug fixes.

--- a/src/pages/includes/index/hero.pug
+++ b/src/pages/includes/index/hero.pug
@@ -3,9 +3,9 @@ section#hero.hero.parallax.js-scroll-target(style='background-image: url(images/
   .hero__body.parallax__body
     .hero__container.parallax__container.container.d-f.fd-c
       .hero__header.parallax__header
-        .hero__caption(data-aos='fade-up' data-aos-delay='0')
+        .hero__caption(data-aos='zoom-out' data-aos-delay='0')
           | Ski & snowboard school
-        h1.hero__title(data-aos='fade-up' data-aos-delay='0')
+        h1.hero__title(data-aos='zoom-out' data-aos-delay='0')
           | Stay & Ski
       .hero__content-wrapper.parallax__content-wrapper
         .hero__content
