--- a/src/pages/includes/index/gallery.pug
+++ b/src/pages/includes/index/gallery.pug
@@ -1,17 +1,17 @@
 <!-- Gallery -->
 section#gallery.gallery.js-gallery.d-g
   a.gallery__item(href="images/content/gallery-01.jpg")
-    img.gallery__img(src="images/content/gallery-thumb-01.jpg" alt="Man holding snowboarding gear." loading="lazy")
+    img.gallery__img(src="images/content/gallery-thumb-01.jpg" alt="Man holding snowboarding gear." data-aos="zoom-out")
   a.gallery__item(href="images/content/gallery-02.jpg")
-    img.gallery__img(src="images/content/gallery-thumb-02.jpg" alt="Girl standing front of the mountain." loading="lazy")
+    img.gallery__img(src="images/content/gallery-thumb-02.jpg" alt="Girl standing front of the mountain." data-aos="zoom-out")
   a.gallery__item(href="images/content/gallery-03.jpg")
-    img.gallery__img(src="images/content/gallery-thumb-03.jpg" alt="Man skiing on the hill." loading="lazy")
+    img.gallery__img(src="images/content/gallery-thumb-03.jpg" alt="Man skiing on the hill." data-aos="zoom-out")
   a.gallery__item(href="images/content/gallery-04.jpg")
-    img.gallery__img(src="images/content/gallery-thumb-04.jpg" alt="Man in skiing gear." loading="lazy")
+    img.gallery__img(src="images/content/gallery-thumb-04.jpg" alt="Man in skiing gear." data-aos="zoom-out")
   a.gallery__item(href="images/content/gallery-05.jpg")
-    img.gallery__img(src="images/content/gallery-thumb-05.jpg" alt="Snowboarding desk on the hill." loading="lazy")
+    img.gallery__img(src="images/content/gallery-thumb-05.jpg" alt="Snowboarding desk on the hill." data-aos="zoom-out")
   a.gallery__item(href="images/content/gallery-06.jpg")
-    img.gallery__img(src="images/content/gallery-thumb-06.jpg" alt="Man holding snowboarding gear on the hill." loading="lazy")
+    img.gallery__img(src="images/content/gallery-thumb-06.jpg" alt="Man holding snowboarding gear on the hill." data-aos="zoom-out")
   a.gallery__item(href="images/content/gallery-07.jpg")
-    img.gallery__img(src="images/content/gallery-thumb-07.jpg" alt="Man going down on the snowboard." loading="lazy")
+    img.gallery__img(src="images/content/gallery-thumb-07.jpg" alt="Man going down on the snowboard." data-aos="zoom-out")
 <!-- Gallery -->
