--- a/src/styles/pages/index/_about.scss
+++ b/src/styles/pages/index/_about.scss
@@ -86,6 +86,10 @@
     &__title {
       margin-bottom: 0.7em;
     }
+
+    &__number {
+      font-size: 3.2rem;
+    }
   }
 
   @include respond(max-md-ls) {
@@ -119,6 +123,16 @@
       &:not(:last-child) {
         margin: 0 0 2rem;
       }
+    }
+
+    &__number {
+      font-size: 2.9rem;
+    }
+  }
+
+  @include respond(max-xs) {
+    &__number {
+      font-size: 2.6rem;
     }
   }
 }
