--- a/src/styles/pages/index/_gallery.scss
+++ b/src/styles/pages/index/_gallery.scss
@@ -48,7 +48,7 @@
       }
     }
 
-    @include respond(max-sm) {
+    @include respond(max-xs) {
       & {
         grid-template-rows: repeat(4, 150px);
       }
