Fixed scroll reveal issue of social item.

--- a/src/pages/includes/mixins/mixins.pug
+++ b/src/pages/includes/mixins/mixins.pug
@@ -30,7 +30,7 @@ mixin testimonials_item(testimonials_img, testimonials_img_alt, testimonials_nam
 
 //- Social item
 mixin social_item(social_link, social_title, social_icon)
-  li.footer__social-item(data-aos='zoom-in' data-aos-delay='1500')
+  li.footer__social-item(data-aos='zoom-in' data-aos-delay='1500' data-aos-offset="-50")
     a.footer__social-link(href= social_link)
       svg.footer__social-icon
         title= social_title 
